Import of CHRWIN/date-spoken-german-0.03 from CPAN.
gitpan-cpan-distribution: Date-Spoken-German
gitpan-cpan-version:      0.03
gitpan-cpan-path:         CHRWIN/date-spoken-german/date-spoken-german-0.03.tar.gz
gitpan-cpan-author:       CHRWIN
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -45,6 +45,12 @@
         Note for windows users: use "nmake" instead of "make" to install
         Date::Spoken::German.
         
+        Just for convenience I've added two install scripts. The first one,
+        install.sh, is for *nix systems with a /bin/sh, the second one,
+        install.cmd, for windows system. They don't do anything more than
+        explained above, install.sh uses "make" and install.cmd calls
+        "nmake".
+        
                      BUGS
                      ====
 
