--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,11 @@
+CHANGES file for perl module Date::Spoken::German
+=================================================
+
 0.1: Initial Version.
 
 0.2: Added POD-Documentation
 
+0.3: Added simple test script t/basic.t using Test::More.
+     Added install.sh and install.cmd scripts for my own
+     convenience :)
+     (2003/12/17)
