Import of CHRWIN/Date-Spoken-German-0.04 from CPAN.
gitpan-cpan-distribution: Date-Spoken-German
gitpan-cpan-version:      0.04
gitpan-cpan-path:         CHRWIN/date-spoken-german/Date-Spoken-German-0.04.tar.gz
gitpan-cpan-author:       CHRWIN
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -9,3 +9,7 @@ CHANGES file for perl module Date::Spoken::German
      Added install.sh and install.cmd scripts for my own
      convenience :)
      (2003/12/17)
+
+0.4: Fixed Makefile options to be more concise and
+     added "use Encoding 'latin1' to module and tests.
+     (2007/11/19)
