--- a/CHANGES
+++ b/CHANGES
@@ -13,3 +13,7 @@ CHANGES file for perl module Date::Spoken::German
 0.4: Fixed Makefile options to be more concise and
      added "use Encoding 'latin1' to module and tests.
      (2007/11/19)
+
+0.5: Fixed a totally braindead uppercase issue with
+     Encoding <=> encoding. Aarggh. I hate DOSishness.
+     (2007/11/19
